--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "dependencies": {
     "@clerk/nextjs": "^6.29.0",
     "@hookform/resolvers": "^5.2.1",
+    "@jsmastery/utils": "^1.0.2",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sentry/nextjs": "^10.3.0",
     "@supabase/supabase-js": "^2.54.0",
+    "@vapi-ai/web": "^2.3.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.536.0",
     "next": "15.4.5",
     "react": "19.1.0",
